[gd_scene load_steps=13 format=3 uid="uid://cf2xw2qj0dnix"]

[ext_resource type="Script" path="res://scenes/screen/game_over_screen.gd" id="1_oit4k"]
[ext_resource type="AudioStream" uid="uid://j6styup6bkq6" path="res://audio/kenney_voiceover_pack/Male/game_over.ogg" id="2_lmmda"]
[ext_resource type="AudioStream" uid="uid://ydu3yw5ul2ih" path="res://audio/kenney_voiceover_pack/Male/you_lose.ogg" id="3_enabh"]
[ext_resource type="AudioStream" uid="uid://dqfata1054ydf" path="res://audio/kenney_voiceover_pack/Female/game_over.ogg" id="4_nik24"]
[ext_resource type="AudioStream" uid="uid://ynto1hhi8562" path="res://audio/kenney_voiceover_pack/Female/congratulations.ogg" id="5_qkrye"]
[ext_resource type="AudioStream" uid="uid://dypy0nfu3hamk" path="res://audio/kenney_voiceover_pack/Female/you_win.ogg" id="6_qt44u"]
[ext_resource type="StyleBox" uid="uid://c1ildl1pxktc5" path="res://styles/menu_style.tres" id="7_av8q4"]

[sub_resource type="Animation" id="Animation_lmm45"]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_gameover_voice"
}]
}

[sub_resource type="Animation" id="Animation_8n3bo"]
resource_name = "game_lose"
length = 2.75
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_lmmda")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_enabh")
}],
"times": PackedFloat32Array(0, 1.4)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_j0vhv"]
resource_name = "game_win"
length = 3.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_nik24")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_qkrye")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_qt44u")
}],
"times": PackedFloat32Array(0, 1.3, 2.6)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wrt5o"]
_data = {
"fade": SubResource("Animation_lmm45"),
"game_lose": SubResource("Animation_8n3bo"),
"game_win": SubResource("Animation_j0vhv")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gi41l"]
bg_color = Color(0, 0, 0, 1)

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_oit4k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade"
libraries = {
"": SubResource("AnimationLibrary_wrt5o")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_av8q4")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = " Restart "

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = " Main menu "

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Overlay" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gi41l")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
